# mediaplayer

./: .gitignore  README.md  analyze.sh  format.sh  notes.org  pyproject.toml  pyray.pyi
src/: .utils.py.swp  main.py  pyray.pyi  utils.py
